<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">Quiz App</string>
    <string name="your_name">Your name</string>
    <string name="get_started">Get Started</string>
    <string name="chooseContactbtn">CHOOSE CONTACT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question" />
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="resultPts">Points</string>
    <string name="firstAnswer" />
    <string name="secondAnswer" />
    <string name="thirdAnswer" />
    <string name="forthAnswer" />
    <string name="quiz_result_title">Quiz Result</string>
    <string name="quiz_result">TextView</string>
    <string name="try_again_btn">Try Again</string>
    <string name="enjoy_the_quiz_app_where_you_can">Enjoy the quiz app, where you can:</string>
    <string name="test_your_skills_btn">Test Your Skills</string>
    <string name="read_questions_btn">Read Questions</string>
    <string name="create_question_btn">Create Question</string>
    <string name="home">Home</string>
    <string name="quiz_time">Quiz time</string>
    <string name="profile">Profile</string>
    <string name="list_of_questions">List of questions</string>
    <string name="new_question">New Question</string>
    <string name="enjoy_the_quiz">Enjoy the quiz</string>
    <string name="menu_options">Menu options</string>
    <string name="navigation_drawer_open">Menu Open</string>
    <string name="navigation_drawer_close">Menu Close</string>
    <string name="player_name_profile_textview">Player name:</string>
    <string name="highscore_textview_title">Highscore:</string>
    <string name="answer">Answer</string>
    <string name="correct_answer">Correct answer</string>
    <string name="add_question">Add Question</string>
    <string name="answers">Answers</string>
    <string name="type_your_question_here">Type your question here</string>

</resources>