<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_menuBtn"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/quizTime_menuBtn"
            android:icon="@drawable/ic_start_quiz"
            android:title="@string/quiz_time" />
        <item
            android:id="@+id/profile_menuBtn"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/listOfQuestions_menuBtn"
            android:icon="@drawable/ic_list_of_questions"
            android:title="@string/list_of_questions" />
        <item
            android:id="@+id/newQuestion_menuBtn"
            android:icon="@drawable/ic_new_question"
            android:title="@string/new_question" />
    </group>


</menu>