<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.quiz.QuestionFragment">


        <TextView
            android:id="@+id/questionText"
            android:layout_width="290dp"
            android:layout_height="140dp"
            android:text="@string/question"
            android:textAlignment="viewStart"
            android:textColor="#673AB7"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.216" />

        <RadioGroup
            android:id="@+id/answerGroup"
            android:layout_width="290sp"
            android:layout_height="242sp"
            android:layout_marginBottom="64sp"
            app:layout_constraintBottom_toTopOf="@+id/nextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <RadioButton
                android:id="@+id/firstAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/firstAnswer"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/secondAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/secondAnswer"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/thirdAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/thirdAnswer"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/forthAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/forthAnswer"
                android:textSize="16sp" />

        </RadioGroup>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.944" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>