<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.questions.QuestionAddragment">


    <EditText
        android:id="@+id/answer_add_textEdit"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:backgroundTint="#989898"
        android:hint="@string/correct_answer"
        android:inputType="textCapSentences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <EditText
        android:id="@+id/answer2_add_textEdit2"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#989898"
        android:hint="@string/answer"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_add_textEdit" />

    <EditText
        android:id="@+id/answer4_add_textEdit2"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#989898"
        android:hint="@string/answer"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer3_add_textEdit2" />

    <EditText
        android:id="@+id/answer3_add_textEdit2"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#989898"
        android:hint="@string/answer"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer2_add_textEdit2" />

    <EditText
        android:id="@+id/question_add_textEdit"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#989898"
        android:hint="@string/type_your_question_here"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="52dp"
        android:text="@string/answers"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/answer_add_textEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_add_textEdit"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/add_question_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/add_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer4_add_textEdit2" />


</androidx.constraintlayout.widget.ConstraintLayout>